--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
+# Mac
+*.DS_Store
+*._*
+
+# KiCad
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.kicad_sch-bak
+*-backups
+*.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+~*.lck
+\#auto_saved_files# 
+
+
+# Python
+__pycache__/
+__pypackages__/
+.env
 .venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
